# std_cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/core/: bubble_sort.hpp  draw.hpp  quick_sort.hpp
include/utils/: rng.hpp  timer.hpp
scripts/: build.sh
src/: main.cpp
src/core/: bubble_sort.cpp  draw.cpp  quick_sort.cpp
src/utils/: rng.hpp  timer.hpp
test/: main.cpp
